--- a/catalogo.html
+++ b/catalogo.html
@@ -77,7 +77,7 @@
              <div class="card-body">
                <h5>titulo</h5>
                <p>precio</p>
-               <button class="btn btn-dark"> comprar</button>
+               <button class="btn btn-dark"> Comprar</button>
              </div>
            </div>
          </div>
